@@ -1,3 +1,8 @@
+2017-08-15  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/81790
+	* gcc.dg/torture/pr81790.c: New testcase.
+
 2017-08-14  Martin Sebor  <msebor@redhat.com>
 
 	PR c/81117
